--- a/crypto_proj1.ipynb
+++ b/crypto_proj1.ipynb
@@ -9,7 +9,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import re\n",
-    "import datetime"
+    "import datetime\n",
+    "#https://www.kaggle.com/sudalairajkumar/cryptocurrencypricehistory"
    ]
   },
   {
@@ -149,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -187,6 +188,7 @@
        "      <th>day</th>\n",
        "      <th>year</th>\n",
        "      <th>weekday</th>\n",
+       "      <th>days_in_mo</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -206,6 +208,7 @@
        "      <td>29</td>\n",
        "      <td>2013</td>\n",
        "      <td>0</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -223,6 +226,7 @@
        "      <td>30</td>\n",
        "      <td>2013</td>\n",
        "      <td>1</td>\n",
+       "      <td>30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -240,6 +244,7 @@
        "      <td>1</td>\n",
        "      <td>2013</td>\n",
        "      <td>2</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -257,6 +262,7 @@
        "      <td>2</td>\n",
        "      <td>2013</td>\n",
        "      <td>3</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -274,6 +280,7 @@
        "      <td>3</td>\n",
        "      <td>2013</td>\n",
        "      <td>4</td>\n",
+       "      <td>31</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -287,15 +294,22 @@
        "3    4  Bitcoin    BTC 2013-05-02 23:59:59  125.599998   92.281898   \n",
        "4    5  Bitcoin    BTC 2013-05-03 23:59:59  108.127998   79.099998   \n",
        "\n",
-       "         Open       Close  Volume     Marketcap  mo  day  year  weekday  \n",
-       "0  134.444000  144.539993     0.0  1.603769e+09   4   29  2013        0  \n",
-       "1  144.000000  139.000000     0.0  1.542813e+09   4   30  2013        1  \n",
-       "2  139.000000  116.989998     0.0  1.298955e+09   5    1  2013        2  \n",
-       "3  116.379997  105.209999     0.0  1.168517e+09   5    2  2013        3  \n",
-       "4  106.250000   97.750000     0.0  1.085995e+09   5    3  2013        4  "
+       "         Open       Close  Volume     Marketcap  mo  day  year  weekday  \\\n",
+       "0  134.444000  144.539993     0.0  1.603769e+09   4   29  2013        0   \n",
+       "1  144.000000  139.000000     0.0  1.542813e+09   4   30  2013        1   \n",
+       "2  139.000000  116.989998     0.0  1.298955e+09   5    1  2013        2   \n",
+       "3  116.379997  105.209999     0.0  1.168517e+09   5    2  2013        3   \n",
+       "4  106.250000   97.750000     0.0  1.085995e+09   5    3  2013        4   \n",
+       "\n",
+       "   days_in_mo  \n",
+       "0          30  \n",
+       "1          30  \n",
+       "2          31  \n",
+       "3          31  \n",
+       "4          31  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,64 +321,22 @@
     "ttl['day']=ttl['Date'].dt.day\n",
     "ttl['year']=ttl['Date'].dt.year\n",
     "ttl['weekday']=ttl['Date'].dt.weekday\n",
+    "\n",
+    "x = pd.Series(ttl.apply(lambda row: monthrange(row['year'], row['mo'])[1], axis=1))\n",
+    "ttl['days_in_mo'] = x\n",
+    "\n",
     "ttl.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 99,
    "metadata": {},
    "outputs": [],
    "source": [
     "ttl.head()\n",
     "import calendar\n",
     "calendar?"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([datetime.date(2013, 4, 29), datetime.date(2013, 4, 30),\n",
-       "       datetime.date(2013, 5, 1), ..., datetime.date(2021, 2, 25),\n",
-       "       datetime.date(2021, 2, 26), datetime.date(2021, 2, 27)],\n",
-       "      dtype=object)"
-      ]
-     },
-     "execution_count": 97,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "u = ttl['Date'].max()\n",
-    "x = np.array(pd.DatetimeIndex(ttl['Date']).date)\n",
-    "x"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "monthrange() missing 1 required positional argument: 'month'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-44-2022920abefe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmonthrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmum\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: monthrange() missing 1 required positional argument: 'month'"
-     ]
-    }
-   ],
-   "source": [
-    "monthrange()"
    ]
   },
   {
