--- a/proj1nb.ipynb
+++ b/proj1nb.ipynb
@@ -33,117 +33,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 596,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>InvoiceNo</th>\n",
-       "      <th>StockCode</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>Quantity</th>\n",
-       "      <th>InvoiceDate</th>\n",
-       "      <th>UnitPrice</th>\n",
-       "      <th>CustomerID</th>\n",
-       "      <th>Country</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>85123A</td>\n",
-       "      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12/1/2010 8:26</td>\n",
-       "      <td>2.55</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>71053</td>\n",
-       "      <td>WHITE METAL LANTERN</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12/1/2010 8:26</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>84406B</td>\n",
-       "      <td>CREAM CUPID HEARTS COAT HANGER</td>\n",
-       "      <td>8</td>\n",
-       "      <td>12/1/2010 8:26</td>\n",
-       "      <td>2.75</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>84029G</td>\n",
-       "      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12/1/2010 8:26</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>536365</td>\n",
-       "      <td>84029E</td>\n",
-       "      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n",
-       "      <td>6</td>\n",
-       "      <td>12/1/2010 8:26</td>\n",
-       "      <td>3.39</td>\n",
-       "      <td>17850.0</td>\n",
-       "      <td>United Kingdom</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "  InvoiceNo StockCode                          Description  Quantity  \\\n",
-       "0    536365    85123A   WHITE HANGING HEART T-LIGHT HOLDER         6   \n",
-       "1    536365     71053                  WHITE METAL LANTERN         6   \n",
-       "2    536365    84406B       CREAM CUPID HEARTS COAT HANGER         8   \n",
-       "3    536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
-       "4    536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
-       "\n",
-       "      InvoiceDate  UnitPrice  CustomerID         Country  \n",
-       "0  12/1/2010 8:26       2.55     17850.0  United Kingdom  \n",
-       "1  12/1/2010 8:26       3.39     17850.0  United Kingdom  \n",
-       "2  12/1/2010 8:26       2.75     17850.0  United Kingdom  \n",
-       "3  12/1/2010 8:26       3.39     17850.0  United Kingdom  \n",
-       "4  12/1/2010 8:26       3.39     17850.0  United Kingdom  "
+       "United Kingdom          495478\n",
+       "Germany                   9495\n",
+       "France                    8557\n",
+       "EIRE                      8196\n",
+       "Spain                     2533\n",
+       "Netherlands               2371\n",
+       "Belgium                   2069\n",
+       "Switzerland               2002\n",
+       "Portugal                  1519\n",
+       "Australia                 1259\n",
+       "Norway                    1086\n",
+       "Italy                      803\n",
+       "Channel Islands            758\n",
+       "Finland                    695\n",
+       "Cyprus                     622\n",
+       "Sweden                     462\n",
+       "Unspecified                446\n",
+       "Austria                    401\n",
+       "Denmark                    389\n",
+       "Japan                      358\n",
+       "Poland                     341\n",
+       "Israel                     297\n",
+       "USA                        291\n",
+       "Hong Kong                  288\n",
+       "Singapore                  229\n",
+       "Iceland                    182\n",
+       "Canada                     151\n",
+       "Greece                     146\n",
+       "Malta                      127\n",
+       "United Arab Emirates        68\n",
+       "European Community          61\n",
+       "RSA                         58\n",
+       "Lebanon                     45\n",
+       "Lithuania                   35\n",
+       "Brazil                      32\n",
+       "Czech Republic              30\n",
+       "Bahrain                     19\n",
+       "Saudi Arabia                10\n",
+       "Name: Country, dtype: int64"
       ]
      },
-     "execution_count": 537,
+     "execution_count": 596,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -151,7 +88,8 @@
    "source": [
     "ttl = pd.read_csv('/Users/APinkerton/NYC_DS_A/projects/proj_1/OnlineRetail.csv',encoding= 'unicode_escape')\n",
     "ttl.columns\n",
-    "ttl.head()"
+    "ttl.head()\n",
+    "ttl.Country.value_counts()"
    ]
   },
   {
@@ -1587,6 +1525,408 @@
     "price_tbl = pd.read_csv('/Users/APinkerton/NYC_DS_A/projects/proj_1/mds.csv')\n",
     "price_tbl.head()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 590,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>InvoiceNo</th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>UnitPrice</th>\n",
+       "      <th>CustomerID</th>\n",
+       "      <th>Country</th>\n",
+       "      <th>0</th>\n",
+       "      <th>Sales_(GBP)</th>\n",
+       "      <th>ret</th>\n",
+       "      <th>...</th>\n",
+       "      <th>day</th>\n",
+       "      <th>year</th>\n",
+       "      <th>date</th>\n",
+       "      <th>Wk</th>\n",
+       "      <th>woy</th>\n",
+       "      <th>454_Month</th>\n",
+       "      <th>Unit_Price</th>\n",
+       "      <th>Price_Flag</th>\n",
+       "      <th>Num_of_Pr</th>\n",
+       "      <th>Ever_Marked</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>85123A</td>\n",
+       "      <td>WHITE HANGING HEART T-LIGHT HOLDER</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>15.30</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>DEC Wk 1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>DEC</td>\n",
+       "      <td>2.55</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Marked</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>71053</td>\n",
+       "      <td>WHITE METAL LANTERN</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>DEC Wk 1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>DEC</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Marked</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84406B</td>\n",
+       "      <td>CREAM CUPID HEARTS COAT HANGER</td>\n",
+       "      <td>8</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>22.00</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>DEC Wk 1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>DEC</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>11</td>\n",
+       "      <td>Marked</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029G</td>\n",
+       "      <td>KNITTED UNION FLAG HOT WATER BOTTLE</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>DEC Wk 1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>DEC</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Marked</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>536365</td>\n",
+       "      <td>84029E</td>\n",
+       "      <td>RED WOOLLY HOTTIE WHITE HEART.</td>\n",
+       "      <td>6</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>17850.0</td>\n",
+       "      <td>United Kingdom</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>20.34</td>\n",
+       "      <td>False</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2010</td>\n",
+       "      <td>2010-12-01</td>\n",
+       "      <td>DEC Wk 1</td>\n",
+       "      <td>48</td>\n",
+       "      <td>DEC</td>\n",
+       "      <td>3.39</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>12</td>\n",
+       "      <td>Marked</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  InvoiceNo StockCode                          Description  Quantity  \\\n",
+       "0    536365    85123A   WHITE HANGING HEART T-LIGHT HOLDER         6   \n",
+       "1    536365     71053                  WHITE METAL LANTERN         6   \n",
+       "2    536365    84406B       CREAM CUPID HEARTS COAT HANGER         8   \n",
+       "3    536365    84029G  KNITTED UNION FLAG HOT WATER BOTTLE         6   \n",
+       "4    536365    84029E       RED WOOLLY HOTTIE WHITE HEART.         6   \n",
+       "\n",
+       "   UnitPrice  CustomerID         Country          0  Sales_(GBP)    ret  ...  \\\n",
+       "0       2.55     17850.0  United Kingdom 2010-12-01        15.30  False  ...   \n",
+       "1       3.39     17850.0  United Kingdom 2010-12-01        20.34  False  ...   \n",
+       "2       2.75     17850.0  United Kingdom 2010-12-01        22.00  False  ...   \n",
+       "3       3.39     17850.0  United Kingdom 2010-12-01        20.34  False  ...   \n",
+       "4       3.39     17850.0  United Kingdom 2010-12-01        20.34  False  ...   \n",
+       "\n",
+       "   day  year       date        Wk woy  454_Month Unit_Price  Price_Flag  \\\n",
+       "0    1  2010 2010-12-01  DEC Wk 1  48        DEC       2.55          MD   \n",
+       "1    1  2010 2010-12-01  DEC Wk 1  48        DEC       3.39          MD   \n",
+       "2    1  2010 2010-12-01  DEC Wk 1  48        DEC       2.75          MD   \n",
+       "3    1  2010 2010-12-01  DEC Wk 1  48        DEC       3.39          MD   \n",
+       "4    1  2010 2010-12-01  DEC Wk 1  48        DEC       3.39          MD   \n",
+       "\n",
+       "  Num_of_Pr  Ever_Marked  \n",
+       "0        10       Marked  \n",
+       "1         4       Marked  \n",
+       "2        11       Marked  \n",
+       "3         8       Marked  \n",
+       "4        12       Marked  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 590,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "price_perf = new.copy()\n",
+    "price_perf.head()\n",
+    "pricing_sales = price_perf.merge(price_tbl, how='left', left_on=['StockCode','UnitPrice'], right_on=['StockCode','Unit_Price'])\n",
+    "pricing_sales.head()\n",
+    "mask1 = pricing_sales['Ever_Marked']=='Marked'\n",
+    "mask2 = pricing_sales['ret']==False\n",
+    "# pricing_sales.loc[mask1 & mask2,:]\n",
+    "reg_md = pricing_sales.loc[mask1 & mask2, :].copy()\n",
+    "reg_md.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 595,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-595-e71c7399a2e9>:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
+      "  final_pricing = reg_md.groupby(['Price_Flag', 'Wk','woy'])['Sales_(GBP)','Quantity'].agg(['sum','count']).copy()\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Sales_(GBP)</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">Quantity</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>sum</th>\n",
+       "      <th>count</th>\n",
+       "      <th>sum</th>\n",
+       "      <th>count</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Price_Flag</th>\n",
+       "      <th>Wk</th>\n",
+       "      <th>woy</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">MD</th>\n",
+       "      <th>APR Wk 1</th>\n",
+       "      <th>14</th>\n",
+       "      <td>128162.86</td>\n",
+       "      <td>7111</td>\n",
+       "      <td>65914</td>\n",
+       "      <td>7111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>APR Wk 2</th>\n",
+       "      <th>15</th>\n",
+       "      <td>142879.82</td>\n",
+       "      <td>6960</td>\n",
+       "      <td>80925</td>\n",
+       "      <td>6960</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>APR Wk 3</th>\n",
+       "      <th>16</th>\n",
+       "      <td>149942.92</td>\n",
+       "      <td>8401</td>\n",
+       "      <td>87898</td>\n",
+       "      <td>8401</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>APR Wk 4</th>\n",
+       "      <th>17</th>\n",
+       "      <td>76999.26</td>\n",
+       "      <td>4068</td>\n",
+       "      <td>46884</td>\n",
+       "      <td>4068</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>APR Wk 5</th>\n",
+       "      <th>13</th>\n",
+       "      <td>24898.03</td>\n",
+       "      <td>1179</td>\n",
+       "      <td>17874</td>\n",
+       "      <td>1179</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        Sales_(GBP)       Quantity      \n",
+       "                                sum count      sum count\n",
+       "Price_Flag Wk       woy                                 \n",
+       "MD         APR Wk 1 14    128162.86  7111    65914  7111\n",
+       "           APR Wk 2 15    142879.82  6960    80925  6960\n",
+       "           APR Wk 3 16    149942.92  8401    87898  8401\n",
+       "           APR Wk 4 17     76999.26  4068    46884  4068\n",
+       "           APR Wk 5 13     24898.03  1179    17874  1179"
+      ]
+     },
+     "execution_count": 595,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "final_pricing = reg_md.groupby(['Price_Flag', 'Wk','woy'])['Sales_(GBP)','Quantity'].agg(['sum','count']).copy()\n",
+    "final_pricing.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
