--- a/proj1nb.ipynb
+++ b/proj1nb.ipynb
@@ -33,6 +33,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 604,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.set_option('display.max_columns', 50)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 596,
    "metadata": {},
    "outputs": [
@@ -1124,7 +1133,8 @@
     "yyz = cal_month_ttl.copy()\n",
     "print(yyz.index)\n",
     "yyz.reset_index()\n",
-    "yyz"
+    "yyz\n",
+    "##yyz = cal month total net sales numbers\n"
    ]
   },
   {
@@ -1147,10 +1157,172 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 607,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Quantity</th>\n",
+       "      <th>Sales_(GBP)</th>\n",
+       "      <th>% to Gross (GBP)</th>\n",
+       "      <th>% to Gross U</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Month</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>397716</td>\n",
+       "      <td>691364.560</td>\n",
+       "      <td>0.064950</td>\n",
+       "      <td>0.037363</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>286695</td>\n",
+       "      <td>523631.890</td>\n",
+       "      <td>0.049192</td>\n",
+       "      <td>0.026933</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>384950</td>\n",
+       "      <td>717639.360</td>\n",
+       "      <td>0.067418</td>\n",
+       "      <td>0.036164</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>312176</td>\n",
+       "      <td>537808.621</td>\n",
+       "      <td>0.050524</td>\n",
+       "      <td>0.029327</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>399425</td>\n",
+       "      <td>770536.020</td>\n",
+       "      <td>0.072388</td>\n",
+       "      <td>0.037524</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>394337</td>\n",
+       "      <td>761739.900</td>\n",
+       "      <td>0.071561</td>\n",
+       "      <td>0.037046</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>407539</td>\n",
+       "      <td>719221.191</td>\n",
+       "      <td>0.067567</td>\n",
+       "      <td>0.038286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>425016</td>\n",
+       "      <td>737014.260</td>\n",
+       "      <td>0.069239</td>\n",
+       "      <td>0.039928</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>575416</td>\n",
+       "      <td>1058590.172</td>\n",
+       "      <td>0.099449</td>\n",
+       "      <td>0.054057</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>628745</td>\n",
+       "      <td>1154979.300</td>\n",
+       "      <td>0.108504</td>\n",
+       "      <td>0.059067</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>771598</td>\n",
+       "      <td>1509496.330</td>\n",
+       "      <td>0.141809</td>\n",
+       "      <td>0.072488</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>677368</td>\n",
+       "      <td>1462538.820</td>\n",
+       "      <td>0.137398</td>\n",
+       "      <td>0.063635</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Quantity  Sales_(GBP)  % to Gross (GBP)  % to Gross U\n",
+       "Month                                                       \n",
+       "1        397716   691364.560          0.064950      0.037363\n",
+       "2        286695   523631.890          0.049192      0.026933\n",
+       "3        384950   717639.360          0.067418      0.036164\n",
+       "4        312176   537808.621          0.050524      0.029327\n",
+       "5        399425   770536.020          0.072388      0.037524\n",
+       "6        394337   761739.900          0.071561      0.037046\n",
+       "7        407539   719221.191          0.067567      0.038286\n",
+       "8        425016   737014.260          0.069239      0.039928\n",
+       "9        575416  1058590.172          0.099449      0.054057\n",
+       "10       628745  1154979.300          0.108504      0.059067\n",
+       "11       771598  1509496.330          0.141809      0.072488\n",
+       "12       677368  1462538.820          0.137398      0.063635"
+      ]
+     },
+     "execution_count": 607,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "##Gross\n",
+    "maskg = ~new['ret']\n",
+    "gross = new.loc[maskg, :].copy()\n",
+    "gross['Unit_Cost']=gross['Sales_(GBP)']/gross['Quantity']\n",
+    "\n",
+    "ttlgrossdol = gross['Sales_(GBP)'].sum()\n",
+    "ttlgrossquan = gross['Quantity'].sum()\n",
+    "\n",
+    "gross['% to Gross (GBP)'] = gross['Sales_(GBP)'] / ttlgrossdol\n",
+    "gross['% to Gross U'] = gross['Quantity'] / ttlgrossquan\n",
+    "\n",
+    "ttl_mo_gross = gross.groupby(['Month'])[['Quantity','Sales_(GBP)','% to Gross (GBP)','% to Gross U']].agg('sum')\n",
+    "\n",
+    "ttl_mo_gross['% to Gross U'] = ttl_mo_gross['Quantity'] / ttlgrossdol\n",
+    "monthly_gross_ttls = (ttlgrossdol,ttlgrossquan)\n",
+    "ttl_mo_gross"
+   ]
   },
   {
    "cell_type": "code",
@@ -1340,7 +1512,8 @@
     "\n",
     "ttl_mo_ret['% to RetU'] = ttl_mo_ret['Quantity'] / ttlretdol\n",
     "monthly_ttls = (ttlretdol,ttlretquan)\n",
-    "ttl_mo_ret"
+    "ttl_mo_ret\n",
+    "##ttl_mo_ret = ttl returns only\n"
    ]
   },
   {
@@ -1752,17 +1925,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 595,
+   "execution_count": 603,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-595-e71c7399a2e9>:1: FutureWarning: Indexing with multiple keys (implicitly converted to a tuple of keys) will be deprecated, use a list instead.\n",
-      "  final_pricing = reg_md.groupby(['Price_Flag', 'Wk','woy'])['Sales_(GBP)','Quantity'].agg(['sum','count']).copy()\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -1792,6 +1957,8 @@
        "      <th></th>\n",
        "      <th colspan=\"2\" halign=\"left\">Sales_(GBP)</th>\n",
        "      <th colspan=\"2\" halign=\"left\">Quantity</th>\n",
+       "      <th>Avg_Qty</th>\n",
+       "      <th>Avg_Sls_(GBP)</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th></th>\n",
@@ -1801,11 +1968,15 @@
        "      <th>count</th>\n",
        "      <th>sum</th>\n",
        "      <th>count</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Price_Flag</th>\n",
-       "      <th>Wk</th>\n",
        "      <th>woy</th>\n",
+       "      <th>Wk</th>\n",
+       "      <th>Price_Flag</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -1814,69 +1985,167 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"5\" valign=\"top\">MD</th>\n",
-       "      <th>APR Wk 1</th>\n",
-       "      <th>14</th>\n",
-       "      <td>128162.86</td>\n",
-       "      <td>7111</td>\n",
-       "      <td>65914</td>\n",
-       "      <td>7111</td>\n",
+       "      <th rowspan=\"2\" valign=\"top\">1</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">JAN Wk 1</th>\n",
+       "      <th>MD</th>\n",
+       "      <td>111030.77</td>\n",
+       "      <td>5628</td>\n",
+       "      <td>64862</td>\n",
+       "      <td>5628</td>\n",
+       "      <td>11.524876</td>\n",
+       "      <td>19.728282</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>APR Wk 2</th>\n",
-       "      <th>15</th>\n",
-       "      <td>142879.82</td>\n",
-       "      <td>6960</td>\n",
-       "      <td>80925</td>\n",
-       "      <td>6960</td>\n",
+       "      <th>Reg_Price</th>\n",
+       "      <td>6693.32</td>\n",
+       "      <td>706</td>\n",
+       "      <td>3751</td>\n",
+       "      <td>706</td>\n",
+       "      <td>5.313031</td>\n",
+       "      <td>9.480623</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>APR Wk 3</th>\n",
-       "      <th>16</th>\n",
-       "      <td>149942.92</td>\n",
-       "      <td>8401</td>\n",
-       "      <td>87898</td>\n",
-       "      <td>8401</td>\n",
+       "      <th rowspan=\"2\" valign=\"top\">2</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">JAN Wk 2</th>\n",
+       "      <th>MD</th>\n",
+       "      <td>191175.21</td>\n",
+       "      <td>8256</td>\n",
+       "      <td>89658</td>\n",
+       "      <td>8256</td>\n",
+       "      <td>10.859738</td>\n",
+       "      <td>23.155912</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>APR Wk 4</th>\n",
-       "      <th>17</th>\n",
-       "      <td>76999.26</td>\n",
-       "      <td>4068</td>\n",
-       "      <td>46884</td>\n",
-       "      <td>4068</td>\n",
+       "      <th>Reg_Price</th>\n",
+       "      <td>10301.28</td>\n",
+       "      <td>878</td>\n",
+       "      <td>4515</td>\n",
+       "      <td>878</td>\n",
+       "      <td>5.142369</td>\n",
+       "      <td>11.732665</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>APR Wk 5</th>\n",
-       "      <th>13</th>\n",
-       "      <td>24898.03</td>\n",
-       "      <td>1179</td>\n",
-       "      <td>17874</td>\n",
-       "      <td>1179</td>\n",
+       "      <th>3</th>\n",
+       "      <th>JAN Wk 3</th>\n",
+       "      <th>MD</th>\n",
+       "      <td>209872.89</td>\n",
+       "      <td>8774</td>\n",
+       "      <td>141583</td>\n",
+       "      <td>8774</td>\n",
+       "      <td>16.136654</td>\n",
+       "      <td>23.919864</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>49</th>\n",
+       "      <th>DEC Wk 2</th>\n",
+       "      <th>Reg_Price</th>\n",
+       "      <td>69539.60</td>\n",
+       "      <td>6057</td>\n",
+       "      <td>19904</td>\n",
+       "      <td>6057</td>\n",
+       "      <td>3.286115</td>\n",
+       "      <td>11.480865</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">50</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">DEC Wk 3</th>\n",
+       "      <th>MD</th>\n",
+       "      <td>197718.97</td>\n",
+       "      <td>9221</td>\n",
+       "      <td>106140</td>\n",
+       "      <td>9221</td>\n",
+       "      <td>11.510682</td>\n",
+       "      <td>21.442248</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Reg_Price</th>\n",
+       "      <td>27684.14</td>\n",
+       "      <td>2582</td>\n",
+       "      <td>7897</td>\n",
+       "      <td>2582</td>\n",
+       "      <td>3.058482</td>\n",
+       "      <td>10.721975</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"2\" valign=\"top\">51</th>\n",
+       "      <th rowspan=\"2\" valign=\"top\">DEC Wk 4</th>\n",
+       "      <th>MD</th>\n",
+       "      <td>82772.40</td>\n",
+       "      <td>3550</td>\n",
+       "      <td>40208</td>\n",
+       "      <td>3550</td>\n",
+       "      <td>11.326197</td>\n",
+       "      <td>23.316169</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Reg_Price</th>\n",
+       "      <td>16997.49</td>\n",
+       "      <td>1423</td>\n",
+       "      <td>3848</td>\n",
+       "      <td>1423</td>\n",
+       "      <td>2.704146</td>\n",
+       "      <td>11.944828</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>120 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                        Sales_(GBP)       Quantity      \n",
-       "                                sum count      sum count\n",
-       "Price_Flag Wk       woy                                 \n",
-       "MD         APR Wk 1 14    128162.86  7111    65914  7111\n",
-       "           APR Wk 2 15    142879.82  6960    80925  6960\n",
-       "           APR Wk 3 16    149942.92  8401    87898  8401\n",
-       "           APR Wk 4 17     76999.26  4068    46884  4068\n",
-       "           APR Wk 5 13     24898.03  1179    17874  1179"
+       "                        Sales_(GBP)       Quantity          Avg_Qty  \\\n",
+       "                                sum count      sum count              \n",
+       "woy Wk       Price_Flag                                               \n",
+       "1   JAN Wk 1 MD           111030.77  5628    64862  5628  11.524876   \n",
+       "             Reg_Price      6693.32   706     3751   706   5.313031   \n",
+       "2   JAN Wk 2 MD           191175.21  8256    89658  8256  10.859738   \n",
+       "             Reg_Price     10301.28   878     4515   878   5.142369   \n",
+       "3   JAN Wk 3 MD           209872.89  8774   141583  8774  16.136654   \n",
+       "...                             ...   ...      ...   ...        ...   \n",
+       "49  DEC Wk 2 Reg_Price     69539.60  6057    19904  6057   3.286115   \n",
+       "50  DEC Wk 3 MD           197718.97  9221   106140  9221  11.510682   \n",
+       "             Reg_Price     27684.14  2582     7897  2582   3.058482   \n",
+       "51  DEC Wk 4 MD            82772.40  3550    40208  3550  11.326197   \n",
+       "             Reg_Price     16997.49  1423     3848  1423   2.704146   \n",
+       "\n",
+       "                        Avg_Sls_(GBP)  \n",
+       "                                       \n",
+       "woy Wk       Price_Flag                \n",
+       "1   JAN Wk 1 MD             19.728282  \n",
+       "             Reg_Price       9.480623  \n",
+       "2   JAN Wk 2 MD             23.155912  \n",
+       "             Reg_Price      11.732665  \n",
+       "3   JAN Wk 3 MD             23.919864  \n",
+       "...                               ...  \n",
+       "49  DEC Wk 2 Reg_Price      11.480865  \n",
+       "50  DEC Wk 3 MD             21.442248  \n",
+       "             Reg_Price      10.721975  \n",
+       "51  DEC Wk 4 MD             23.316169  \n",
+       "             Reg_Price      11.944828  \n",
+       "\n",
+       "[120 rows x 6 columns]"
       ]
      },
-     "execution_count": 595,
+     "execution_count": 603,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_pricing = reg_md.groupby(['Price_Flag', 'Wk','woy'])['Sales_(GBP)','Quantity'].agg(['sum','count']).copy()\n",
-    "final_pricing.head()"
+    "final_pricing = reg_md.groupby(['woy','Wk','Price_Flag'])[['Sales_(GBP)','Quantity']].agg(['sum','count']).copy()\n",
+    "final_pricing['Avg_Qty'] = final_pricing[('Quantity', 'sum')] / final_pricing[('Quantity', 'count')]\n",
+    "final_pricing['Avg_Sls_(GBP)'] = final_pricing[('Sales_(GBP)', 'sum')] / final_pricing[('Sales_(GBP)', 'count')]\n",
+    "final_pricing"
    ]
   },
   {
@@ -1930,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 630,
    "metadata": {
     "scrolled": true
    },
@@ -1941,40 +2210,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 629,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['DOTCOM POSTAGE',\n",
-       " 'REGENCY CAKESTAND 3 TIER',\n",
-       " 'PARTY BUNTING',\n",
-       " 'WHITE HANGING HEART T-LIGHT HOLDER',\n",
-       " 'JUMBO BAG RED RETROSPOT',\n",
-       " 'RABBIT NIGHT LIGHT',\n",
-       " 'POSTAGE',\n",
-       " \"PAPER CHAIN KIT 50'S CHRISTMAS \",\n",
-       " 'ASSORTED COLOUR BIRD ORNAMENT',\n",
-       " 'CHILLI LIGHTS',\n",
-       " 'SPOTTY BUNTING',\n",
-       " 'JUMBO BAG PINK POLKADOT',\n",
-       " 'BLACK RECORD COVER FRAME',\n",
-       " 'PICNIC BASKET WICKER 60 PIECES',\n",
-       " 'SET OF 3 CAKE TINS PANTRY DESIGN ',\n",
-       " 'DOORMAT KEEP CALM AND COME IN',\n",
-       " 'JAM MAKING SET WITH JARS',\n",
-       " 'WOOD BLACK BOARD ANT WHITE FINISH',\n",
-       " 'LUNCH BAG RED RETROSPOT',\n",
-       " 'POPCORN HOLDER',\n",
-       " 'HOT WATER BOTTLE TEA AND SYMPATHY',\n",
-       " 'VICTORIAN GLASS HANGING T-LIGHT',\n",
-       " 'CHOCOLATE HOT WATER BOTTLE',\n",
-       " 'JUMBO BAG STRAWBERRY',\n",
-       " 'PAPER CHAIN KIT VINTAGE CHRISTMAS']"
+       "4767"
       ]
      },
-     "execution_count": 555,
+     "execution_count": 629,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1982,11 +2227,17 @@
    "source": [
     "top = new.groupby(['StockCode','Description'])[['Quantity','Sales_(GBP)']].agg(['sum']).copy()\n",
     "top.columns\n",
+    "rest=[]\n",
     "top_prod = top.sort_values(('Sales_(GBP)', 'sum'),ascending=False).head(25).copy()\n",
+    "rest_prod = top.sort_values(('Sales_(GBP)', 'sum'),ascending=False).iloc[25:,:].copy()\n",
     "top25=[]\n",
     "for [s,d] in top_prod.index:\n",
     "    top25.append(d)\n",
-    "top25"
+    "for [s,d] in rest_prod.index:\n",
+    "    rest.append(d)\n",
+    "\n",
+    "top25\n",
+    "len(rest)"
    ]
   },
   {
