--- a/proj1nb.ipynb
+++ b/proj1nb.ipynb
@@ -2979,44 +2979,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 798,
+   "execution_count": 813,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['DOTCOM POSTAGE',\n",
-       " 'REGENCY CAKESTAND 3 TIER',\n",
-       " 'PARTY BUNTING',\n",
-       " 'WHITE HANGING HEART T-LIGHT HOLDER',\n",
-       " 'JUMBO BAG RED RETROSPOT',\n",
-       " 'RABBIT NIGHT LIGHT',\n",
-       " 'POSTAGE',\n",
-       " \"PAPER CHAIN KIT 50'S CHRISTMAS \",\n",
-       " 'ASSORTED COLOUR BIRD ORNAMENT',\n",
-       " 'CHILLI LIGHTS',\n",
-       " 'SPOTTY BUNTING',\n",
-       " 'JUMBO BAG PINK POLKADOT',\n",
-       " 'BLACK RECORD COVER FRAME',\n",
-       " 'PICNIC BASKET WICKER 60 PIECES',\n",
-       " 'SET OF 3 CAKE TINS PANTRY DESIGN ',\n",
-       " 'DOORMAT KEEP CALM AND COME IN',\n",
-       " 'JAM MAKING SET WITH JARS',\n",
-       " 'WOOD BLACK BOARD ANT WHITE FINISH',\n",
-       " 'LUNCH BAG RED RETROSPOT',\n",
-       " 'POPCORN HOLDER',\n",
-       " 'HOT WATER BOTTLE TEA AND SYMPATHY',\n",
-       " 'VICTORIAN GLASS HANGING T-LIGHT',\n",
-       " 'CHOCOLATE HOT WATER BOTTLE',\n",
-       " 'JUMBO BAG STRAWBERRY',\n",
-       " 'PAPER CHAIN KIT VINTAGE CHRISTMAS']"
-      ]
-     },
-     "execution_count": 798,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "top_week = new.groupby(['StockCode','Description','woy'])[['Quantity','Sales_(GBP)']].agg(['sum']).copy()\n",
     "top = new.groupby(['StockCode','Description'])[['Quantity','Sales_(GBP)']].agg(['sum']).copy()\n",
@@ -3032,7 +2997,10 @@
     "top25\n",
     "rest\n",
     "top_prod.columns = top_prod.columns.get_level_values(0)\n",
-    "top_prod"
+    "top_week.reset_index(inplace=True)\n",
+    "top_week.columns = top_week.columns.get_level_values(0)\n",
+    "boolean_ser = top_week.Description.isin(top25)\n",
+    "top_week = top_week.loc[boolean_ser,:]"
    ]
   },
   {
@@ -3061,7 +3029,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 750,
+   "execution_count": 822,
    "metadata": {},
    "outputs": [
     {
@@ -3077,29 +3045,17 @@
        "        vertical-align: top;\n",
        "    }\n",
        "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
        "    }\n",
        "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
-       "    <tr>\n",
+       "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>StockCode</th>\n",
        "      <th>Description</th>\n",
        "      <th>woy</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>min</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -3175,25 +3131,23 @@
        "</div>"
       ],
       "text/plain": [
-       "         StockCode                          Description woy\n",
-       "                                                           \n",
-       "                                                        min\n",
-       "0            10002          INFLATABLE POLITICAL GLOBE    1\n",
-       "1            10080             GROOVY CACTUS INFLATABLE   9\n",
-       "2            10080                                check  45\n",
-       "3            10120                         DOGGY RUBBER   8\n",
-       "4           10123C                HEARTS WRAPPING TAPE    9\n",
-       "...            ...                                  ...  ..\n",
-       "4787  gift_0001_20  to push order througha s stock was   24\n",
-       "4788  gift_0001_30   Dotcomgiftshop Gift Voucher £30.00   1\n",
-       "4789  gift_0001_40   Dotcomgiftshop Gift Voucher £40.00  14\n",
-       "4790  gift_0001_50   Dotcomgiftshop Gift Voucher £50.00  18\n",
-       "4791             m                               Manual  51\n",
+       "         StockCode                          Description  woy\n",
+       "0            10002          INFLATABLE POLITICAL GLOBE     1\n",
+       "1            10080             GROOVY CACTUS INFLATABLE    9\n",
+       "2            10080                                check   45\n",
+       "3            10120                         DOGGY RUBBER    8\n",
+       "4           10123C                HEARTS WRAPPING TAPE     9\n",
+       "...            ...                                  ...  ...\n",
+       "4787  gift_0001_20  to push order througha s stock was    24\n",
+       "4788  gift_0001_30   Dotcomgiftshop Gift Voucher £30.00    1\n",
+       "4789  gift_0001_40   Dotcomgiftshop Gift Voucher £40.00   14\n",
+       "4790  gift_0001_50   Dotcomgiftshop Gift Voucher £50.00   18\n",
+       "4791             m                               Manual   51\n",
        "\n",
        "[4792 rows x 3 columns]"
       ]
      },
-     "execution_count": 750,
+     "execution_count": 822,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3203,163 +3157,13 @@
     "# first_week = first_week.drop(columns=('index',''))\n",
     "min_week = first_week.groupby(['StockCode', 'Description'])[[('woy',\"\")]].agg(['min']).copy()\n",
     "min_week = min_week.reset_index()\n",
-    "min_week\n",
-    "# min_week[(min_week[('woy','')]>8) & (min_week[('woy','')] < 49)]\n",
-    "# min_week.columns"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 781,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead tr th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th>StockCode</th>\n",
-       "      <th>Description</th>\n",
-       "      <th>woy</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th>min</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>10080</td>\n",
-       "      <td>GROOVY CACTUS INFLATABLE</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>10080</td>\n",
-       "      <td>check</td>\n",
-       "      <td>45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>10123C</td>\n",
-       "      <td>HEARTS WRAPPING TAPE</td>\n",
-       "      <td>9</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>10124G</td>\n",
-       "      <td>ARMY CAMO BOOKCOVER TAPE</td>\n",
-       "      <td>11</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10133</td>\n",
-       "      <td>damaged</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4782</th>\n",
-       "      <td>PADS</td>\n",
-       "      <td>PADS TO MATCH ALL CUSHIONS</td>\n",
-       "      <td>15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4785</th>\n",
-       "      <td>gift_0001_10</td>\n",
-       "      <td>Dotcomgiftshop Gift Voucher £10.00</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4787</th>\n",
-       "      <td>gift_0001_20</td>\n",
-       "      <td>to push order througha s stock was</td>\n",
-       "      <td>24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4789</th>\n",
-       "      <td>gift_0001_40</td>\n",
-       "      <td>Dotcomgiftshop Gift Voucher £40.00</td>\n",
-       "      <td>14</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4790</th>\n",
-       "      <td>gift_0001_50</td>\n",
-       "      <td>Dotcomgiftshop Gift Voucher £50.00</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1820 rows × 3 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         StockCode                          Description woy\n",
-       "                                                           \n",
-       "                                                        min\n",
-       "1            10080             GROOVY CACTUS INFLATABLE   9\n",
-       "2            10080                                check  45\n",
-       "4           10123C                HEARTS WRAPPING TAPE    9\n",
-       "6           10124G             ARMY CAMO BOOKCOVER TAPE  11\n",
-       "9            10133                              damaged  46\n",
-       "...            ...                                  ...  ..\n",
-       "4782          PADS           PADS TO MATCH ALL CUSHIONS  15\n",
-       "4785  gift_0001_10   Dotcomgiftshop Gift Voucher £10.00  10\n",
-       "4787  gift_0001_20  to push order througha s stock was   24\n",
-       "4789  gift_0001_40   Dotcomgiftshop Gift Voucher £40.00  14\n",
-       "4790  gift_0001_50   Dotcomgiftshop Gift Voucher £50.00  18\n",
-       "\n",
-       "[1820 rows x 3 columns]"
-      ]
-     },
-     "execution_count": 781,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "min_week.columns\n",
-    "m1 = min_week[('woy','')]>8\n",
-    "m1 = np.array(m1)\n",
-    "m2 = min_week[('woy','')] < 49\n",
-    "m2 = np.array(m2)\n",
-    "min_week = min_week.loc[m1 & m2, :]\n",
+    "min_week.columns=min_week.columns.get_level_values(0)\n",
     "min_week"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 785,
+   "execution_count": 844,
    "metadata": {},
    "outputs": [
     {
@@ -3385,10 +3189,16 @@
        "      <th></th>\n",
        "      <th>StockCode</th>\n",
        "      <th>Description</th>\n",
-       "      <th>woy</th>\n",
+       "      <th>f_wol</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>10002</td>\n",
+       "      <td>INFLATABLE POLITICAL GLOBE</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>10080</td>\n",
@@ -3400,6 +3210,125 @@
        "      <td>10080</td>\n",
        "      <td>check</td>\n",
        "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>10120</td>\n",
+       "      <td>DOGGY RUBBER</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>10123C</td>\n",
+       "      <td>HEARTS WRAPPING TAPE</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4787</th>\n",
+       "      <td>gift_0001_20</td>\n",
+       "      <td>to push order througha s stock was</td>\n",
+       "      <td>24</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4788</th>\n",
+       "      <td>gift_0001_30</td>\n",
+       "      <td>Dotcomgiftshop Gift Voucher £30.00</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4789</th>\n",
+       "      <td>gift_0001_40</td>\n",
+       "      <td>Dotcomgiftshop Gift Voucher £40.00</td>\n",
+       "      <td>14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4790</th>\n",
+       "      <td>gift_0001_50</td>\n",
+       "      <td>Dotcomgiftshop Gift Voucher £50.00</td>\n",
+       "      <td>18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4791</th>\n",
+       "      <td>m</td>\n",
+       "      <td>Manual</td>\n",
+       "      <td>51</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>4792 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         StockCode                          Description  f_wol\n",
+       "0            10002          INFLATABLE POLITICAL GLOBE       1\n",
+       "1            10080             GROOVY CACTUS INFLATABLE      9\n",
+       "2            10080                                check     45\n",
+       "3            10120                         DOGGY RUBBER      8\n",
+       "4           10123C                HEARTS WRAPPING TAPE       9\n",
+       "...            ...                                  ...    ...\n",
+       "4787  gift_0001_20  to push order througha s stock was      24\n",
+       "4788  gift_0001_30   Dotcomgiftshop Gift Voucher £30.00      1\n",
+       "4789  gift_0001_40   Dotcomgiftshop Gift Voucher £40.00     14\n",
+       "4790  gift_0001_50   Dotcomgiftshop Gift Voucher £50.00     18\n",
+       "4791             m                               Manual     51\n",
+       "\n",
+       "[4792 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 844,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "min_week.columns = min_week.columns.get_level_values(0)\n",
+    "min_week = min_week.rename(columns={'woy':'f_wol'})\n",
+    "min_week"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 848,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>StockCode</th>\n",
+       "      <th>Description</th>\n",
+       "      <th>f_wol</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>10080</td>\n",
+       "      <td>GROOVY CACTUS INFLATABLE</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -3414,10 +3343,16 @@
        "      <td>11</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>10133</td>\n",
-       "      <td>damaged</td>\n",
-       "      <td>46</td>\n",
+       "      <th>12</th>\n",
+       "      <td>15030</td>\n",
+       "      <td>FAN BLACK FRAME</td>\n",
+       "      <td>12</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>15058A</td>\n",
+       "      <td>BLUE POLKADOT GARDEN PARASOL</td>\n",
+       "      <td>9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -3457,42 +3392,37 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>1820 rows × 3 columns</p>\n",
+       "<p>1490 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         StockCode                          Description  woy\n",
-       "1            10080             GROOVY CACTUS INFLATABLE    9\n",
-       "2            10080                                check   45\n",
-       "4           10123C                HEARTS WRAPPING TAPE     9\n",
-       "6           10124G             ARMY CAMO BOOKCOVER TAPE   11\n",
-       "9            10133                              damaged   46\n",
-       "...            ...                                  ...  ...\n",
-       "4782          PADS           PADS TO MATCH ALL CUSHIONS   15\n",
-       "4785  gift_0001_10   Dotcomgiftshop Gift Voucher £10.00   10\n",
-       "4787  gift_0001_20  to push order througha s stock was    24\n",
-       "4789  gift_0001_40   Dotcomgiftshop Gift Voucher £40.00   14\n",
-       "4790  gift_0001_50   Dotcomgiftshop Gift Voucher £50.00   18\n",
+       "         StockCode                          Description  f_wol\n",
+       "1            10080             GROOVY CACTUS INFLATABLE      9\n",
+       "4           10123C                HEARTS WRAPPING TAPE       9\n",
+       "6           10124G             ARMY CAMO BOOKCOVER TAPE     11\n",
+       "12           15030                     FAN BLACK FRAME      12\n",
+       "26          15058A         BLUE POLKADOT GARDEN PARASOL      9\n",
+       "...            ...                                  ...    ...\n",
+       "4782          PADS           PADS TO MATCH ALL CUSHIONS     15\n",
+       "4785  gift_0001_10   Dotcomgiftshop Gift Voucher £10.00     10\n",
+       "4787  gift_0001_20  to push order througha s stock was      24\n",
+       "4789  gift_0001_40   Dotcomgiftshop Gift Voucher £40.00     14\n",
+       "4790  gift_0001_50   Dotcomgiftshop Gift Voucher £50.00     18\n",
        "\n",
-       "[1820 rows x 3 columns]"
+       "[1490 rows x 3 columns]"
       ]
      },
-     "execution_count": 785,
+     "execution_count": 848,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "min_week.columns = min_week.columns.get_level_values(0)\n",
-    "min_week"
+    "m1 = min_week['f_wol']>8\n",
+    "m2 = min_week['f_wol']<44\n",
+    "first_week = min_week.loc[m1 & m2,:].copy()\n",
+    "first_week"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
