--- a/proj1nb.ipynb
+++ b/proj1nb.ipynb
@@ -4,15 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Inferring Product Lifecycles and Seasonality "
+    "# Business Analysis around Product Lifecycles and Seasonality "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### What can we infer about the high-level Seasonality of an eCommerce retailer given a year of transaction-level data?\n",
-    "### What "
+    "### What can I infer about the high-level Seasonality of an eCommerce retailer given a year of transaction-level data?\n"
    ]
   },
   {
